# libagents

./: .gitmodules  CMakeLists.txt  README.md
cmake/: libagentscppConfig.cmake.in
examples/: basic_agent.cpp  claude_tool_test.cpp  events.cpp  hosted_query.cpp  multi_tool.cpp
include/libagents/: agent.hpp  config.hpp  errors.hpp  events.hpp  libagents.hpp  provider.hpp  session.hpp  tool_builder.hpp
include/libagents/internal/: response_waiter.hpp
include/libagents/providers/: claude_provider.hpp  copilot_provider.hpp
src/: agent.cpp  config.cpp  provider_factory.cpp  session_base.cpp
src/providers/: claude_provider.cpp  copilot_provider.cpp
tools/: libagents_cli.cpp
